fix: scroll overflow removed, adding scroll gutter

--- a/src/assets/styles/default.css
+++ b/src/assets/styles/default.css
@@ -3,7 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins";
-  overflow-y: scroll;
+}
+
+html {
+  scrollbar-gutter: stable;
 }
 
 li {
